Arreglamos y mejoramos el procedimiento de creación de releases con JPackage
* Globalizamos los parámetros de descarga para las dependencias.
* Agregamos .gitignore para /JPackage
* Ahora es posible crear una aplicación para Windows y Linux
* Usamos el comando **/gradlew desktop:appBundle** para crear una Aplicación
* Los paquetes de aplicación se exportan en el directorio **modulo/build/relases/Finisterra/**